# boyer-moore-visualization-rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: security_audit.yml  test.yml
src/: lib.rs  main.rs
tests/: integration_tests.rs
