[package]
authors = ["Sanchith Hegde <sanchith.hegde01@gmail.com>"]
edition = "2018"
name    = "boyer_moore"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow    = "1.0.37"
log       = "0.4.11"
simplelog = "0.9.0"
termcolor = "1.1.2"

[profile.release]
codegen-units = 1
lto = "fat"
