[package]
authors = [ "Sanchith Hegde <sanchith.hegde01@gmail.com>" ]
edition = "2021"
name    = "boyer_moore"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow     = "1.0.55"
env_logger = "0.9.0"
log        = "0.4.14"
termcolor  = "1.1.3"

[profile.release]
codegen-units = 1
lto           = "fat"

[features]
